--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "turbo": "^2.3.4",
     "typescript": "^5.7.3"
   },
-  "packageManager": "npm@10.1.0"
+  "packageManager": "npm@10.1.0",
+  "dependencies": {
+    "axios": "^1.7.9",
+    "ethers": "^6.13.5"
+  }
 }
